@@ -4,6 +4,7 @@ import com.querydsl.core.types.Projections;
 import com.querydsl.core.types.dsl.BooleanExpression;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
 import org.example.back.achievement.dto.RecordSummaryResDto;
 import org.example.back.db.entity.Member;
@@ -21,9 +22,11 @@ import org.springframework.stereotype.Repository;
 import java.time.LocalDate;
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Repository
 @RequiredArgsConstructor
+@Slf4j
 public class RecordCustomImpl implements RecordCustom {
 
     private final JPAQueryFactory query;
@@ -34,15 +37,19 @@ public class RecordCustomImpl implements RecordCustom {
         Pageable pageable = PageRequest.of(1, pageSize);
         List<Record> records = query.selectFrom(record)
                 .where(record.member.eq(member))
-                .where(record.gameMode.stringValue().contains(gameMode.name()))
+                .where(isFilterGameMode(gameMode))
                 .where(ltRecordId(lastId))
                 .orderBy(record.id.desc())
                 .limit(pageSize + 1)
                 .fetch();
 
-        List<RecordDto> recordResponseDto = records.stream().map(Record::toRecordDto).toList();
+        List<RecordDto> recordResponseDto = records.stream().map(Record::toRecordDto).collect(Collectors.toList());
 
         return checkLastPage(pageable, recordResponseDto);
+    }
+    private BooleanExpression isFilterGameMode(GameMode gameMode) {
+        if(gameMode == null) return null;
+        return record.gameMode.stringValue().contains(gameMode.name());
     }
 
     private BooleanExpression ltRecordId(Long recordId) {
@@ -80,10 +87,10 @@ public class RecordCustomImpl implements RecordCustom {
         LocalDate endDate = startDate.plusMonths(1).minusDays(1);
         return query
                 .select(Projections.constructor(StatisticDto.class,
-                        record.count(),
-                        record.calorie.sum(),
-                        record.distance.sum(),
-                        record.duration.sum()))
+                        record.count().intValue(), // Long to Integer 변환
+                        record.calorie.sum().intValue(), // BigDecimal to Integer 변환
+                        record.distance.sum().floatValue(), // BigDecimal to Float 변환
+                        record.duration.sum().longValue())) // BigDecimal to Long 변환
                 .from(record)
                 .where(record.member.eq(member)
                         .and(record.runStartTime.between(startDate.atStartOfDay(), endDate.atTime(23, 59, 59))))
@@ -96,10 +103,10 @@ public class RecordCustomImpl implements RecordCustom {
         LocalDate endDate = startDate.plusYears(1).minusDays(1);
         return query
                 .select(Projections.constructor(StatisticDto.class,
-                        record.count(),
-                        record.calorie.sum(),
-                        record.distance.sum(),
-                        record.duration.sum()))
+                        record.count().intValue(), // Long to Integer 변환
+                        record.calorie.sum().intValue(), // BigDecimal to Integer 변환
+                        record.distance.sum().floatValue(), // BigDecimal to Float 변환
+                        record.duration.sum().longValue())) // BigDecimal to Long 변환
                 .from(record)
                 .where(record.member.eq(member)
                         .and(record.runStartTime.between(startDate.atStartOfDay(), endDate.atTime(23, 59, 59))))
@@ -110,13 +117,31 @@ public class RecordCustomImpl implements RecordCustom {
     public StatisticDto getStatisticByAll(Member member) {
         return query
                 .select(Projections.constructor(StatisticDto.class,
-                        record.count(),
-                        record.calorie.sum(),
-                        record.distance.sum(),
-                        record.duration.sum()))
+                        record.count().intValue(), // Long to Integer 변환
+                        record.calorie.sum().intValue(), // BigDecimal to Integer 변환
+                        record.distance.sum().floatValue(), // BigDecimal to Float 변환
+                        record.duration.sum().longValue())) // BigDecimal to Long 변환
                 .from(record)
                 .where(record.member.eq(member))
                 .fetchOne();
+    }
+
+    @Override
+    public boolean existsDoubleSevenDuration(Long memberId) {
+        return query.selectOne()
+            .from(record)
+            .where(record.duration.mod(100L).eq(77L), record.member.id.eq(memberId))
+            .fetchFirst()!=null;
+    }
+
+    @Override
+    public List<Integer> findRunDate(Long memberId,int year, int month) {
+        log.info("runDate : {}", month);
+        return query
+            .select(record.runStartTime.dayOfMonth())
+            .from(record)
+            .where(record.member.id.eq(memberId), record.runStartTime.month().eq(month), record.runStartTime.year().eq(year))
+            .fetch();
     }
 
     @Override
